--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Trip Planner</title>
+  <!-- mapbox css -->
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="style.css">
   <script src="bundle.js" defer> </script>
 </head>
